added custom tree traverser